--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -44,13 +44,13 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-
   max-width: 800px;
   margin-top: 3rem;
 }
 
 .card {
-  margin: 1rem;
+  background-color: #ffffff;
+
   flex-basis: 45%;
   padding: 1.5rem;
   text-align: left;
@@ -58,13 +58,13 @@
   text-decoration: none;
   border: 1px solid #eaeaea;
   border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
+  transition: color 1.5s ease, border-color .2s ease-in-out;
 }
 
 .card:hover,
 .card:focus,
 .card:active {
-  color: #0070f3;
+  color: #137b31;
   border-color: #0070f3;
 }
 
